# com.392

./: CMakeLists.txt  Labs.md  Lectures.md  Projects.md  Readme.md  Results.md
Labs/: Labs.md
Labs/Sources/: branch.c  data.c
Other/: Previous_Course_Recordings.md  Vagrantfile
Practice/: Practice_01-12.md
Practice/Practice_01-12/: 02.c  03.c  04.c  06.c  08.c  09.c  10.c  11.c  12-1.c  12-2.c
Practice_Tasks/: Practice_Tasks.md
Syllabus/: COM_451_Fall_2017_Syllabus.tex  Makefile
ips/: CMakeLists.txt  ips.c
labs/: 01.c  05.c  07.c  08.c  09.c  10.c  11.c  12.c
